[package]
name = "ore-rs"
version = "0.3.0"
authors = ["Dan Draper <dan@cipherstash.com>"]
edition = "2018"
homepage = "https://cipherstash.com"
description = "Order-revealing encryption library used by the CipherStash searchable encryption platform"
license-file = "COPYING"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3.5"
quickcheck = "1.0.3"

[dependencies]
aes = { version = "0.7.5", features = ["armv8"]}
aes-gcm = "0.10.1"
block-modes = "0.8.1"
byteorder = "1.4.3"
hex-literal = "0.3.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
num = "0.4.0"
hmac = { version = "0.12.1", features = ["reset"] }
sha2 = { version = "0.10.6", features = ["asm"] }

[[bench]]
name = "oreaes128"
harness = false
