[workspace]

members = [
    "core",
    "primitives",
]

[workspace.dependencies]
aes = { version = "0.8.2", features = ["zeroize"]}
block-modes = "0.8.1"
byteorder = "1.4.3"
hex-literal = "0.3.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
num = "0.4.0"
hex = "0.4.3"
subtle-ng = "2.5.0"
zeroize = { version = "1.5.7", features = [ "zeroize_derive", "alloc" ] }
lazy_static = "1.4.0"
thiserror = "1.0.38"
