[package]
name = "ore-rs"
version = "0.8.0"
authors = ["Dan Draper <dan@cipherstash.com>"]
edition = "2018"
homepage = "https://cipherstash.com"
description = "Order-revealing encryption library used by the CipherStash searchable encryption platform"
license-file = "LICENCE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3.5"
quickcheck = "1.0.3"

[dependencies]
aes = { version = "0.8.2", features = ["zeroize"]}
block-modes = "0.8.1"
byteorder = "1.4.3"
hex-literal = "0.3.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
num = "0.4.0"
hex = "0.4.3"
subtle-ng = "2.5.0"
zeroize = { version = "1.5.7", features = [ "zeroize_derive", "alloc" ] }
lazy_static = "1.4.0"
thiserror = "1.0.38"

[[bench]]
name = "oreaes128"
harness = false

[[example]]
name = "encrypt"
